--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "antd": "^5.20.6",
+    "antd-mask-input": "^2.0.7",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "lodash.debounce": "^4.0.8",
     "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -60,6 +62,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/lodash": "^4.17.9",
     "path": "^0.12.7",
     "replace-in-file": "^8.1.0",
     "sass": "^1.78.0",
