--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "reduxjs-toolkit-persist": "^7.2.1",
+    "string-to-color": "^2.2.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
