ci/cd: new domain and server -> mr17dom1

--- a/.github/workflows/deploy-to-mr17dom1.yml
+++ b/.github/workflows/deploy-to-mr17dom1.yml
@@ -1,8 +1,8 @@
-name: Build and Deploy
+name: Build and Deploy to mr17dom1
 
 on:
-#  push:
-#    branches: [ "master" ]
+  push:
+    branches: [ "master" ]
   workflow_dispatch:
 
 permissions:
@@ -11,7 +11,7 @@ permissions:
 jobs:
 
   build:
-    name: Build
+    name: Build and Deploy
     runs-on: ubuntu-latest
 
     steps:
@@ -40,21 +40,21 @@ jobs:
       - name: copy files to host
         uses: appleboy/scp-action@v0.1.4
         with:
-          host: ${{ secrets.HOST_IP }}
-          username: ${{ secrets.HOST_USERNAME }}
-          key: ${{ secrets.HOST_KEY }}
-          source: ".env, docker-compose.yaml"
-          target: ${{ secrets.HOST_PROJECT_PATH }}
+          host: ${{ secrets.MR17_HOST_IP }}
+          username: ${{ secrets.MR17_HOST_USERNAME }}
+          key: ${{ secrets.MR17_HOST_KEY }}
+          source: ".env, docker-compose.yml"
+          target: ${{ secrets.MR17_HOST_PROJECT_PATH }}
 
       - name: docker pull && up
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST_IP }}
-          username: ${{ secrets.HOST_USERNAME }}
-          key: ${{ secrets.HOST_KEY }}
+          host: ${{ secrets.MR17_HOST_IP }}
+          username: ${{ secrets.MR17_HOST_USERNAME }}
+          key: ${{ secrets.MR17_HOST_KEY }}
           script: |
             docker login --username json_key --password-stdin cr.yandex <<< '${{ secrets.YC_ADMIN_SA_JSON_CREDENTIALS }}'
-            cd ${{ secrets.HOST_PROJECT_PATH }}            
+            cd ${{ secrets.MR17_HOST_PROJECT_PATH }}            
             docker compose pull
             docker compose up -d
             docker logout cr.yandex
